fixed schedule model and actions
