# swagger_server/swagger/swagger.yaml
@@ -128,35 +128,10 @@ paths:
         schema:
           $ref: "#/definitions/Schedule"
       responses:
+        "201":
+          description: "Created"
         "405":
           description: "Invalid input"
-      x-swagger-router-controller: "swagger_server.controllers.schedules_controller"
-    put:
-      tags:
-      - "schedules"
-      summary: "Update an existing schedule"
-      description: ""
-      operationId: "update_schedule"
-      consumes:
-      - "application/json"
-      - "application/xml"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - in: "body"
-        name: "body"
-        description: ""
-        required: true
-        schema:
-          $ref: "#/definitions/Schedule"
-      responses:
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "Employee not found"
-        "405":
-          description: "Validation exception"
       x-swagger-router-controller: "swagger_server.controllers.schedules_controller"
   /schedules/{scheduleId}:
     get:
@@ -185,59 +160,29 @@ paths:
         "404":
           description: "Schedule not found"
       x-swagger-router-controller: "swagger_server.controllers.schedules_controller"
-    post:
-      tags:
-      - "schedules"
-      summary: "Updates an employee in the store with form data"
-      description: ""
-      operationId: "update_employee_with_form"
-      consumes:
-      - "application/x-www-form-urlencoded"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "scheduleId"
-        in: "path"
-        description: "ID of employe that needs to be updated"
-        required: true
-        type: "integer"
-        format: "int64"
-      - name: "name"
-        in: "formData"
-        description: "Updated name of the employee"
-        required: false
-        type: "string"
-      - name: "status"
-        in: "formData"
-        description: "Updated status of the employee"
-        required: false
-        type: "string"
-      responses:
-        "405":
-          description: "Invalid input"
-      x-swagger-router-controller: "swagger_server.controllers.schedules_controller"
     delete:
       tags:
       - "schedules"
-      summary: "Deletes an employee"
+      summary: "Deletes a schedule"
       description: ""
-      operationId: "delete_employee"
+      operationId: "delete_schedule"
       produces:
       - "application/xml"
       - "application/json"
       parameters:
       - name: "scheduleId"
         in: "path"
-        description: "Employee id to delete"
+        description: "Schedule ID to delete"
         required: true
         type: "integer"
         format: "int64"
       responses:
+        "200":
+          description: "Deleted"
         "400":
           description: "Invalid ID supplied"
         "404":
-          description: "Employee not found"
+          description: "Schedule not found"
       x-swagger-router-controller: "swagger_server.controllers.schedules_controller"
 definitions:
   Schedule:
@@ -252,23 +197,19 @@ definitions:
       peak-start:
         type: "string"
         example: "6:00pm"
-      peack-end:
+      peak-end:
         type: "string"
         example: "7:00pm"
-      flavor:
-        type: "string"
-        example: "standard"
       image:
         type: "string"
         example: "cirros"
     xml:
       name: "Schedule"
     example:
-      flavor: "standard"
       image: "cirros"
       peak-start: "6:00pm"
       id: 0
-      peack-end: "7:00pm"
+      peak-end: "7:00pm"
   Server:
     type: "object"
     required:
